# finance-mauritius

./: CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
src/finance_mauritius/: __init__.py  mcb.py  sbm.py
